--- a/mobile/package.json
+++ b/mobile/package.json
@@ -10,25 +10,24 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
-    "expo": "^51.0.0",
-    "expo-constants": "^16.0.2",
-    "expo-linking": "^6.3.1",
-    "expo-status-bar": "^1.12.1",
-    "react": "18.2.0",
-    "react-native": "0.74.0",
-    "react-native-safe-area-context": "^4.10.5",
-    "react-native-screens": "^3.31.1",
+    "expo": "^53.0.0",
+    "expo-constants": "~17.1.7",
+    "expo-linking": "~7.1.7",
+    "expo-status-bar": "~2.2.3",
+    "react": "19.0.0",
+    "react-native": "0.79.5",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
     "@supabase/supabase-js": "^2.45.4",
     "react-native-url-polyfill": "^2.0.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.46",
-    "@types/react-native": "^0.73.0",
-    "typescript": "^5.4.5",
+    "@types/react": "~19.0.10",
+    "typescript": "~5.8.3",
     "babel-plugin-module-resolver": "^5.0.0"
   }
 }
