--- a/mobile/package.json
+++ b/mobile/package.json
@@ -14,6 +14,8 @@
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
+    "@supabase/supabase-js": "^2.45.4",
+    "date-fns": "^4.1.0",
     "expo": "^53.0.0",
     "expo-constants": "~17.1.7",
     "expo-linking": "~7.1.7",
@@ -22,12 +24,11 @@
     "react-native": "0.79.5",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "@supabase/supabase-js": "^2.45.4",
     "react-native-url-polyfill": "^2.0.0"
   },
   "devDependencies": {
     "@types/react": "~19.0.10",
-    "typescript": "~5.8.3",
-    "babel-plugin-module-resolver": "^5.0.0"
+    "babel-plugin-module-resolver": "^5.0.0",
+    "typescript": "~5.8.3"
   }
 }
