--- a/mobile/package.json
+++ b/mobile/package.json
@@ -10,26 +10,27 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@supabase/supabase-js": "^2.45.4",
     "date-fns": "^4.1.0",
-    "expo": "^53.0.0",
-    "expo-constants": "~17.1.7",
-    "expo-linking": "~7.1.7",
-    "expo-status-bar": "~2.2.3",
-    "react": "19.0.0",
-    "react-native": "0.79.5",
+    "expo": "~54.0.0",
+    "expo-constants": "~18.0.9",
+    "expo-linking": "~8.0.8",
+    "expo-status-bar": "~3.0.8",
+    "react": "19.1.0",
+    "react-native": "0.81.4",
     "react-native-calendars": "^1.1313.0",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
     "react-native-url-polyfill": "^2.0.0"
   },
   "devDependencies": {
     "@types/react": "~19.0.10",
     "babel-plugin-module-resolver": "^5.0.0",
+    "babel-preset-expo": "~12.0.0",
     "typescript": "~5.8.3"
   }
 }
