--- a/mobile/package.json
+++ b/mobile/package.json
@@ -17,6 +17,7 @@
     "@supabase/supabase-js": "^2.45.4",
     "date-fns": "^4.1.0",
     "expo": "~54.0.0",
+    "expo-clipboard": "~8.0.8",
     "expo-constants": "~18.0.9",
     "expo-linking": "~8.0.8",
     "expo-status-bar": "~3.0.8",
@@ -28,7 +29,7 @@
     "react-native-url-polyfill": "^2.0.0"
   },
   "devDependencies": {
-    "@types/react": "~19.0.10",
+    "@types/react": "^19.1.0",
     "babel-plugin-module-resolver": "^5.0.0",
     "babel-preset-expo": "~12.0.0",
     "typescript": "~5.8.3"
