--- a/mobile/tsconfig.json
+++ b/mobile/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "target": "ES2020",
     "module": "ESNext",
@@ -17,6 +18,5 @@
       "@/utils/*": ["src/utils/*"],
       "@/types": ["src/types/index.ts"]
     }
-  },
-  "extends": "expo/tsconfig.base"
+  }
 }
