--- a/mobile/tsconfig.json
+++ b/mobile/tsconfig.json
@@ -1,22 +1,12 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "ESNext",
-    "jsx": "react",
     "strict": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "baseUrl": ".",
     "paths": {
-      "@/components/*": ["src/components/*"],
-      "@/screens/*": ["src/screens/*"],
-      "@/lib/*": ["src/lib/*"],
-      "@/hooks/*": ["src/hooks/*"],
-      "@/navigation/*": ["src/navigation/*"],
-      "@/utils/*": ["src/utils/*"],
-      "@/types": ["src/types/index.ts"]
+      "@/*": ["src/*"]
     }
-  }
+  },
+  "include": ["src/**/*", "App.tsx"]
 }
