notifications, new header buttons

--- a/mobile/tsconfig.json
+++ b/mobile/tsconfig.json
@@ -5,6 +5,7 @@
     "forceConsistentCasingInFileNames": true,
     "moduleResolution": "bundler",
     "baseUrl": ".",
+    "rootDir": ".",
     "paths": {
       "@/*": ["./src/*"]
     }
