--- a/mobile/package.json
+++ b/mobile/package.json
@@ -17,22 +17,25 @@
     "@react-navigation/native-stack": "^6.9.26",
     "@supabase/supabase-js": "^2.45.4",
     "date-fns": "^4.1.0",
-    "expo": "~54.0.0",
+    "expo": "~54.0.32",
     "expo-clipboard": "~8.0.8",
-    "expo-constants": "~18.0.9",
-    "expo-linking": "~8.0.8",
-    "expo-status-bar": "~3.0.8",
+    "expo-constants": "~18.0.13",
+    "expo-dev-client": "~6.0.20",
+    "expo-device": "~8.0.10",
+    "expo-linking": "~8.0.11",
+    "expo-notifications": "~0.32.16",
+    "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
-    "react-native": "0.81.4",
+    "react-native": "0.81.5",
     "react-native-calendars": "^1.1313.0",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-url-polyfill": "^2.0.0"
   },
   "devDependencies": {
-    "@types/react": "^19.1.0",
+    "@types/react": "~19.1.10",
     "babel-plugin-module-resolver": "^5.0.0",
-    "babel-preset-expo": "~12.0.0",
-    "typescript": "~5.8.3"
+    "babel-preset-expo": "~54.0.10",
+    "typescript": "~5.9.2"
   }
 }
